2007-05-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf.h: added cast_to_as_mcloader()
	* gameswf/gameswf_as_classes/as_mcloader.*: mc_loader is added to gameswf listener 
	in add_listener() but not in constructor
	* gameswf/gameswf_sprite.*: added unloadMovie()
	* gameswf/gameswf_dlist.*: added remove_display_object(character* ch) that is used 
	to unload movie
	* gameswf/gameswf_environment.* rewritten load_file().
	During loadMovie(".jpg", ...), loadMovie(".3ds", ...) & unloadMovie() new empty 
	sprite_instance	is't created and target is used as new sprite_instance. 
	* gameswf/gameswf_impl.*: added MetaData tag reader

2007-05-15  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_styles.cpp: SWF 8 and later supports up to 15 gradient control points
	* docs/AUTHORS: misc updates

2007-05-15  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_test_ogl.cpp:	removed warning at the start
	* gameswf/gameswf_text.cpp:	fixed edit_text bug for Flash 8

2007-05-15  Vitaly Alexeev <tishka92@yahoo.com>

	* base/jpeg.cpp: fixed bug that is shown at playing Flash 8 files
	* gameswf/gameswf_font.*,
	* gameswf/gameswf_impl.*,
	* gameswf/gameswf_action.cpp,
	* gameswf/gameswf_styles.cpp,
	* gameswf/gameswf_text.cpp,
	* gameswf/gameswf.h:
	Work on maintenance of compatibility with Flash 8

2007-05-13  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/plugins/lib3ds/gameswf_3ds.*: inhibited till the best times
	* gameswf/gameswf_font.*
	* gameswf/gameswf_impl.*
	* gameswf/gameswf_stream.*
	* gameswf/gameswf_styles.*
	* gameswf/gameswf_shape.cpp:
	added readers of DefineFont3, DefineShape4, DefineFileAttribute & DefineFontAlignZones tags

2007-05-06  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/plugins/lib3ds/gameswf_3ds.*: more readable, fixed memory leak & cleanup
	* gameswf/gameswf_render_handler_ogl.cpp: 
	added m_texture=0 operator after glDeleteTexture() for debuging memory leaks

2007-05-03  Vitaly Alexeev <tishka92@yahoo.com>
