@@ -1,3 +1,9 @@
+2007-05-20  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf_character.cpp,
+	* gameswf/gameswf_impl.h:
+	fixed _width & _height properties
+
 2007-05-17  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* gameswf/gameswf.h: added cast_to_as_mcloader()
